--- a/style.css
+++ b/style.css
@@ -21,11 +21,21 @@ body>div.container{
 #nav {
   margin-top: 5%;
   background-color: #e42626bb;
-  text-align: left;
   padding: 2%;
   margin: auto;
   width: 80%;
   border-radius: 10px;
+}
+#nav label{
+  margin-bottom: 3%;
+}
+
+input[type="text"]{
+  width: 60%;
+}
+input[type="button"]{
+  width: 40%;
+  margin-top: 2%;
 }
 h1, h2{
   text-shadow: 4px 0px 0px #0075BE, -4px 0px 0px #0075BE, 0px 4px 0px #0075BE, 0px -4px 0px #0075BE,
@@ -98,12 +108,36 @@ label {
     grid-template-columns: 1fr 1fr;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 770px) {
   #pokemons{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr ;
   }
-  input[type="text"]{
-    margin-bottom: 2%;
+  #nav label{
+    margin-bottom: 3%;
+  }
+  .pokemon{
+    width: 70%;
+    margin: auto;
+    margin-bottom: 4%;
+  }
+
+  input[type="button"]{
+    width: 30%;
+    margin-top: 2%;
+  }
+}
+@media (max-width: 380px) {
+  .container{
+    width: 350px;
+  }
+  .pokemon{
+    width: 70%;
+    margin: auto;
+    margin-bottom: 4%;
+  }
+  h1, h2{
+    font-size: 1rem;
+    margin: auto;
   }
 }
